--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>Primer programa en git</title>
 </head>
 <body>
-    
+    <h1>Andersson Oswaldo Urrea Retana</h1>
+    <h2>2019284</h2>
 </body>
 </html>
